--- a/users/templates/users/estudantes_notas.html
+++ b/users/templates/users/estudantes_notas.html
@@ -116,12 +116,18 @@
             </td>
             <td> <!-- Média -->
               {% with media=aluno.get_medias|dict_key:ano_semestre %}
+                {% if media.media < 5 %}
+                    <span style="color:red">
+                {% endif %}
                 {% if media.pesos != 1 %}
-                  <a style="color:red" data-toggle="tooltip" data-html="true" animation="true" title="Pesos da média diferente de 100% ({% widthratio media.pesos 1 100 %}%)">
+                  <a style="color:orange" data-toggle="tooltip" data-html="true" animation="true" title="Pesos da média diferente de 100% ({% widthratio media.pesos 1 100 %}%)">
                 {% endif %}    
-                  {{media.media|floatformat:1}}
+                {{media.media|floatformat:1}}
                 {% if media.pesos != 1 %}
                   </a>
+                {% endif %}
+                {% if media.media < 5 %}
+                    </span>
                 {% endif %}
               {% endwith %}
             </td>
