--- a/projetos/templates/projetos/evolucao_objetivos.html
+++ b/projetos/templates/projetos/evolucao_objetivos.html
@@ -58,7 +58,8 @@
                         ],
                         label: "{{media.objetivo}}",
                         borderColor: "{{media.cor}}",
-                        fill: false
+                        fill: false,
+                        spanGaps: true,
                     },
                 {% endfor %}
             ]
