--- a/templates/cores_bancas.html
+++ b/templates/cores_bancas.html
@@ -5,15 +5,15 @@
 {% endcomment %}
 
 <script>
-  var color_banca_final = '#72b354';
-  var color_banca_intermediaria = '#d1a214';
-  var color_banca_falconi = '#df52f6';
+  var color_banca_final = '#74a559';
+  var color_banca_intermediaria = '#e6b734';
+  var color_banca_falconi = '#ff38a6';
 </script>
 
 <style>
   :root {
-    --color_banca_final: #72b354;
-    --color_banca_intermediaria: #d1a214;
-    --color_banca_falconi: #df52f6;
+    --color_banca_final: #74a559;
+    --color_banca_intermediaria: #e6b734;
+    --color_banca_falconi: #ff38a6;
   }
 </style>
