--- a/professores/templates/professores/dinamicas_lista.html
+++ b/professores/templates/professores/dinamicas_lista.html
@@ -41,7 +41,7 @@
                 <b>Grupo:</b>
                 <ol>
                   {% for alocacao in e.projeto.alocacao_set.all %} 
-                    <li><a href="{% url 'estudante_detail' alocacao.aluno.id %}">{{alocacao.aluno.user.get_full_name}} [{{ alocacao.aluno.get_curso_display }}]  <a href="mailto:{{aluno.user.email}}">&lt;{{alocacao.aluno.user.email}}&gt;</a>&nbsp;
+                    <li><a href="{% url 'estudante_detail' alocacao.aluno.id %}">{{alocacao.aluno.user.get_full_name}} [{{ alocacao.aluno.get_curso_display }}]  <a href="mailto:{{alocacao.aluno.user.email}}">&lt;{{alocacao.aluno.user.email}}&gt;</a>&nbsp;
                     </a></li>
                   {% endfor %}
                 </ol>
