limitando tamanho do campo

--- a/professores/templates/professores/dinamicas_editar.html
+++ b/professores/templates/professores/dinamicas_editar.html
@@ -99,7 +99,7 @@
       
       <br><br>
       <label for="local">Local:
-        <input id="local" name="local" type="text" size="36" style="max-width: 100%;"
+        <input id="local" name="local" type="text" size="36" style="max-width: 100%;" maxlength="280"
         {% if encontro %}
           value="{{encontro.location}}"
         {% endif %} 
