--- a/templates/edicoes.html
+++ b/templates/edicoes.html
@@ -33,8 +33,8 @@
           <select class="filter custom-select w-auto" id="filterCurso">
               <option value="T">todos</option>
               <option value="C" {% if curso == "computação" %}selected{% endif %}>computação</option>
-              <option value="M" {% if curso == "mecatrônica" %}selected{% endif %}>mecatrônica</option>
-              <option value="X" {% if curso == "mecânica" %}selected{% endif %}>mecânica</option>
+              <option value="X" {% if curso == "mecatrônica" %}selected{% endif %}>mecatrônica</option>
+              <option value="M" {% if curso == "mecânica" %}selected{% endif %}>mecânica</option>
           </select>
         {% endif %}
         <div id="spinner" class="ml-2 input-group-append" style="visibility: hidden">
