isolando salvar imagens

--- a/projetos/templates/projetos/analise_notas.html
+++ b/projetos/templates/projetos/analise_notas.html
@@ -16,9 +16,24 @@
   {% comment %} Para chamar os Tooltips {% endcomment %}
   <script>{% include "tooltip.js" %}</script>
 
+  {% comment %} Para gerar as imagens {% endcomment %}
+  <script src="{% static 'js/html2canvas.min.js' %}"></script>
+  <script src="{% static 'js/jspdf.min.js' %}"></script>
+
 {% endblock %}
 
 {% block content %}
+
+  <script>
+    function ajusta() { }
+    function reajusta() { }
+  </script>
+
+  {% with file_name="analise_notas" %}
+    {% include "save_image.html" %}
+  {% endwith %}
+
+    <div id="tudo">
 
     <span class="titulo">Análise de Notas/Conceitos</span>
 
@@ -519,6 +534,7 @@
             </script>
 
         </div>
+    </div>
     </div>
 
     {% with com_cursos=True %}
