--- a/users/templates/users/estudantes_lista.html
+++ b/users/templates/users/estudantes_lista.html
@@ -149,7 +149,6 @@
 
     <div id="canvas-holder">
       <canvas id="chart-programas"></canvas>
-      <small>contando estudantes alocados em projetos ou não</small>
       <br><br>
       <canvas id="chart-generos"></canvas>
     </div>
@@ -310,7 +309,7 @@
           responsive: true,
           title: {
             display: true,
-            text: 'Estudantes por tipo por semestre',
+            text: 'Estudantes por curso por semestre',
             position: 'top'
           },
           legend: {
