--- a/projetos/templates/projetos/distribuicao_areas.html
+++ b/projetos/templates/projetos/distribuicao_areas.html
@@ -11,6 +11,10 @@
     <script src="{% static 'js/jquery.min.js' %}"></script>
     <script src="{% static 'js/jquery.horizBarChart.min.js' %}"></script>
 
+    {% comment %} Para gerar as imagens {% endcomment %}
+    <script src="{% static 'js/html2canvas.min.js' %}"></script>
+    <script src="{% static 'js/jspdf.min.js' %}"></script>
+
     <script>
         function bar(){
         $('.chart').horizBarChart({
@@ -30,6 +34,17 @@
 {% endblock %}
 
 {% block content %}
+
+    <script>
+        function ajusta() { }
+        function reajusta() { }
+    </script>
+
+    {% with file_name="analise_notas" %}
+        {% include "save_image.html" %}
+    {% endwith %}
+
+    <div id="tudo">
 
     <span class="titulo">Tendência de Áreas de Interesse</span><br>
 
@@ -91,7 +106,8 @@
          Total de Projetos: {{total}}<br>
       {% endif %} 
     </div>
-
+    
+    </div>
 
 
     <script>
