eixos no scater

--- a/projetos/templates/projetos/correlacao_medias_cr.html
+++ b/projetos/templates/projetos/correlacao_medias_cr.html
@@ -137,6 +137,20 @@
                             {% endif %}
                         }
                     },
+                    scales: {
+                        yAxes: [{
+                            scaleLabel: {
+                                display: true,
+                                labelString: 'CR'
+                            }
+                        }],
+                        xAxes: [{
+                            scaleLabel: {
+                                display: true,
+                                labelString: 'Média'
+                            }
+                        }]
+                    },
 
                 };
 
