--- a/projetos/templates/projetos/distribuicao_areas.html
+++ b/projetos/templates/projetos/distribuicao_areas.html
@@ -76,36 +76,44 @@
         <option value="M">Mecânica</option>
         <option value="X">Mecatrônica</option>
     </select>
+    &nbsp;
+
+    <span id="spinner" style="visibility: hidden">
+        <span class="spinner-border text-secondary" style="width: 1.2rem; height: 1.2rem;" role="status" aria-hidden="true">
+            <span class="sr-only input-group-text">Carregando...</span>
+        </span>
+    </span>
+
     <br>
 
     <div style="line-height:80%;"><br></div>
 
-    <div class="2areas2" style="line-height: 1.3;">
-        <ul class="chart">
-        {% for key, value in areaspfe.items %}
-            <span
-                {% comment %} Tooltip para a descrição da área de interesse. {% endcomment %}
-                {% if value.1 %}
-                    data-toggle="tooltip" data-html="true" animation="true" title="{{value.1}}"
-                {% endif %}
-                >
-                {{key}}<br>
-            </span>
-            <li class="past" title="" style="margin-top:0px; margin-bottom: 12px;">
-                <span class="bar" data-number="{{value.0}}"></span>
-                <span class="number">{{value.0}}</span>
-            </li>
-        {% endfor %}
-      </ul>
-      
-      {% if tipo == "estudantes" %}
-        Total de Estudantes: {{total}} <small>(total de estudantes que preencheram algum campo: {{total_preenchido}})</small><br>
-      {% elif tipo == "propostas" %}
-         Total de Propostas: {{total}}<br>
-      {% elif tipo == "projetos" %}
-         Total de Projetos: {{total}}<br>
-      {% endif %} 
-    </div>
+        <div class="2areas2" style="line-height: 1.3;">
+            <ul class="chart">
+            {% for key, value in areaspfe.items %}
+                <span
+                    {% comment %} Tooltip para a descrição da área de interesse. {% endcomment %}
+                    {% if value.1 %}
+                        data-toggle="tooltip" data-html="true" animation="true" title="{{value.1}}"
+                    {% endif %}
+                    >
+                    {{key}}<br>
+                </span>
+                <li class="past" title="" style="margin-top:0px; margin-bottom: 12px;">
+                    <span class="bar" data-number="{{value.0}}"></span>
+                    <span class="number">{{value.0}}</span>
+                </li>
+            {% endfor %}
+        </ul>
+        
+        {% if tipo == "estudantes" %}
+            Total de Estudantes: {{total}} <small>(total de estudantes que preencheram algum campo: {{total_preenchido}})</small><br>
+        {% elif tipo == "propostas" %}
+            Total de Propostas: {{total}}<br>
+        {% elif tipo == "projetos" %}
+            Total de Projetos: {{total}}<br>
+        {% endif %} 
+        </div>
     
     </div>
 
@@ -113,6 +121,7 @@
     <script>
 
         function atualiza_tabela() {
+            $("#spinner").css("visibility", "visible");
             var tipo = $("#filterTipo option:selected").attr("value");
             var edicao = $("#filterEdicao option:selected").attr("value");
             var curso =  $("#filterCurso option:selected").attr("value");
@@ -128,6 +137,7 @@
                 success: function(response){
                     $("div.2areas2").replaceWith($("div.2areas2",response));
                     bar();
+                    $("#spinner").css("visibility", "hidden");
                 },
                 error: function(response) {
                     alert('error');
